<RichTextArea/> - error icon position, create link dialog fixes (#1876)
* <RichTextArea/> - open bugs: Error icon is overlapping the scrollbar

* <RichTextArea/> - open bugs:
 - When Text is selected and the link is clicked, the popover menu should have a prefilled “text to display” value.
 - When text is selected and Link is clicked - the dropdown should be the same as when not selected.

--- a/src/RichTextArea/RichTextArea.scss
+++ b/src/RichTextArea/RichTextArea.scss
@@ -79,7 +79,7 @@ $marginLeft: $paddingLeft;
   .isEditorFocused & {
     @include FocusBox;
   }
-  
+
   .isEditorFocused.withError & {
     @include FocusBoxError;
   }
@@ -125,7 +125,7 @@ $marginLeft: $paddingLeft;
     display: flex;
     position: absolute;
     top: 6px;
-    right: 6px;
+    right: 12px;
 
     &:hover {
       background-color: $R10;
